- Optionally use dnsmasq for DHCP (and DNS!) instead of ISC dhcpd.
- Add --mac and remove requirement for --name to be an ip, mac, or hostname.
- Manpage cleanup
- Patch to allow pre and post triggers
- Patch to allow --createrepo-flags and to cache on import, fix multiple calls to createrepo

* Thu Apr 26 2007 - 0.4.8
- Make import friendlier for older distros
- Make import friendlier for newer createrepos that don't have --basedir

* Fri Apr 20 2007 - 0.4.7
- Disable mod_python tracker piece for RHEL5 (replacement eventual).
- Kickstart tracking now understands Apache logs
- Added support for --rpm-list parameter to "repo add" for download of partial content from repositories
  (ex: cobbler and koan from FC6extras, w/o games).
- More consistant naming on imports, regardless of data source.
- Teach cobbler to remove .olddata dirs, which can happen if createrepo crashes or is killed mid-process
- Default yum_core_repos_from_server to 0 
- Implemented triggers for add/delete commands
- BootAPI and Config object classes are now Borg patterned to prevent duplication of config info from the API.
- cobbler_syslogd -> cobblerd, now has XMLRPC component for koan >= 0.2.9 clients.  Old clients still work.
- Make cobbler_import work for Centos 5
- Removed requirements on what files that are parameters to --kernel and --initrd must be named.
- Added support for "rename", "copy", and "edit" commands -- before there just was "add" and "remove"

* Thu Apr 05 2007 - 0.4.6
- Bind cobbler_syslogd to all addresses
- Store repos as list, not string
- Fix traceback in cobbler_sync with older configurations (pre-kickstart tracking)
- Make cobbler import feature better understand older RHEL and in-between builds of Fedora.
- Make cobbler repo add/reposync understand http://, ftp://, and some limited support for RHN.
- Add settings parameter to toggle core repo mirror behavior on/off.
- Manpage cleanup.

* Fri Mar 23 2007 - 0.4.5