@@ -1,7 +1,7 @@
 %{!?python_sitelib: %define python_sitelib %(%{__python} -c "from distutils.sysconfig import get_python_lib; print get_python_lib()")}
 Summary: Boot server configurator
 Name: cobbler
-Version: 0.4.9
+Version: 0.5.0
 Release: 1%{?dist}
 Source0: %{name}-%{version}.tar.gz
 License: GPL
@@ -134,7 +134,7 @@ test "x$RPM_BUILD_ROOT" != "x" && rm -rf $RPM_BUILD_ROOT
 
 %changelog
 
-* Thu May 24 2007 Michael DeHaan <mdehaan@redhat.com> - 0.4.9-1
+* Wed Jun 12 2007 Michael DeHaan <mdehaan@redhat.com> - 0.5.0-1
 - Upstream changes (see CHANGELOG)
 - Added dnsmasq.template 
 
